...

    <TextView
        android:id="@+id/date"
        style="@style/commonSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/contextMenu"
        android:layout_toLeftOf="@+id/contextMenu"
        android:layout_toEndOf="@+id/recIndicator"
        android:layout_toRightOf="@+id/recIndicator"
        android:ellipsize="marquee"
        android:singleLine="true" />

...
