...
    <string name="remote_7">7</string>
    <string name="remote_8">8</string>
    <string name="remote_9">9</string>
    <string name="remote_0">0</string>
    <string name="active">Active</string>
    <string name="busyDeleteTimer">Deleting timer&#8230;</string>
    <string name="stream">Stream</string>
    <string name="aspectRatio">Aspect ratio</string>
    <string name="maxHeight">Max. height</string>
    <string name="maxWidth">Max. width</string>
    <string name="error_unknonwn_host">Unknown host</string>
    <string name="error_connection_timeout">Connection timeout</string>
    <string name="error_invalid_url">Invalid URL</string>
...
