...
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/ffmpegpreset" />

                    <Spinner
                        android:id="@+id/encodingSpeedSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:entries="@array/ffmpegPresets" />
                </TableRow>
...
